tests/init_state/ref_obligations/pointee_obligation_unfulfilled.err.expected
error: at 22:5: [INIT-RefObligationUnfulfilled] In function 'out_scalar_never', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
 22 |     return
    |     ^^^^^^
  = note: reference declared here
    |
 20 | fn out_scalar_never(r: &out i64) {
    |                     ^^^^^^^^^^^
error: at 27:5: [INIT-RefObligationUnfulfilled] In function 'out_struct_never', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
 27 |     return
    |     ^^^^^^
  = note: reference declared here
    |
 25 | fn out_struct_never(r: &out P) {
    |                     ^^^^^^^^^
error: at 36:5: [INIT-RefObligationUnfulfilled] In function 'out_struct_partial', block 'entry': reference 'r' has unfulfilled obligation: pointee is partially initialized, but must be initialized before the reference expires
    |
 36 |     return
    |     ^^^^^^
  = note: reference declared here
    |
 33 | fn out_struct_partial(r: &out P) {
    |                       ^^^^^^^^^
error: at 41:5: [INIT-RefObligationUnfulfilled] In function 'out_enum_never', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
 41 |     return
    |     ^^^^^^
  = note: reference declared here
    |
 39 | fn out_enum_never(r: &out E) {
    |                   ^^^^^^^^^
error: at 46:5: [INIT-RefObligationUnfulfilled] In function 'out_array_never', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
 46 |     return
    |     ^^^^^^
  = note: reference declared here
    |
 44 | fn out_array_never(r: &out [i64; 3]) {
    |                    ^^^^^^^^^^^^^^^^
error: at 53:5: [INIT-RefObligationUnfulfilled] In function 'out_array_partial', block 'entry': reference 'r' has unfulfilled obligation: pointee is partially initialized, but must be initialized before the reference expires
    |
 53 |     return
    |     ^^^^^^
  = note: reference declared here
    |
 50 | fn out_array_partial(r: &out [i64; 3]) {
    |                      ^^^^^^^^^^^^^^^^
error: at 58:5: [INIT-RefObligationUnfulfilled] In function 'out_param_never', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
 58 |     return
    |     ^^^^^^
  = note: reference declared here
    |
 56 | fn<T: Copy + Drop> out_param_never(r: &out T) {
    |                                    ^^^^^^^^^
error: at 63:5: [INIT-RefObligationUnfulfilled] In function 'out_generic_struct_never', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
 63 |     return
    |     ^^^^^^
  = note: reference declared here
    |
 61 | fn<T: Copy + Drop> out_generic_struct_never(r: &out Box<T>) {
    |                                             ^^^^^^^^^^^^^^
error: at 70:5: [INIT-RefObligationUnfulfilled] In function 'drop_scalar_untouched', block 'entry': reference 'r' has unfulfilled obligation: pointee is initialized, but must be consumed before the reference expires
    |
 70 |     return
    |     ^^^^^^
  = note: reference declared here
    |
 68 | fn drop_scalar_untouched(r: &drop i64) {
    |                          ^^^^^^^^^^^^
error: at 75:5: [INIT-RefObligationUnfulfilled] In function 'drop_struct_untouched', block 'entry': reference 'r' has unfulfilled obligation: pointee is initialized, but must be consumed before the reference expires
    |
 75 |     return
    |     ^^^^^^
  = note: reference declared here
    |
 73 | fn drop_struct_untouched(r: &drop P) {
    |                          ^^^^^^^^^^
error: at 83:5: [INIT-RefObligationUnfulfilled] In function 'drop_struct_partial', block 'entry': reference 'r' has unfulfilled obligation: pointee is partially initialized, but must be consumed before the reference expires
    |
 83 |     drop x;
    |     ^^^^^^
  = note: reference declared here
    |
 79 | fn drop_struct_partial(r: &drop P) {
    |                        ^^^^^^^^^^
error: at 89:5: [INIT-RefObligationUnfulfilled] In function 'drop_array_untouched', block 'entry': reference 'r' has unfulfilled obligation: pointee is initialized, but must be consumed before the reference expires
    |
 89 |     return
    |     ^^^^^^
  = note: reference declared here
    |
 87 | fn drop_array_untouched(r: &drop [i64; 3]) {
    |                         ^^^^^^^^^^^^^^^^^
error: at 94:5: [INIT-RefObligationUnfulfilled] In function 'drop_param_untouched', block 'entry': reference 'r' has unfulfilled obligation: pointee is initialized, but must be consumed before the reference expires
    |
 94 |     return
    |     ^^^^^^
  = note: reference declared here
    |
 92 | fn<T: Copy + Drop> drop_param_untouched(r: &drop T) {
    |                                         ^^^^^^^^^^
error: at 99:5: [INIT-RefObligationUnfulfilled] In function 'drop_generic_struct_untouched', block 'entry': reference 'r' has unfulfilled obligation: pointee is initialized, but must be consumed before the reference expires
    |
 99 |     return
    |     ^^^^^^
  = note: reference declared here
    |
 97 | fn<T: Copy + Drop> drop_generic_struct_untouched(r: &drop Box<T>) {
    |                                                  ^^^^^^^^^^^^^^^
error: at 108:5: [INIT-RefObligationUnfulfilled] In function 'mut_scalar_moved_no_writeback', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
     |
 108 |     drop x;
     |     ^^^^^^
  = note: reference declared here
     |
 104 | fn mut_scalar_moved_no_writeback(r: &mut i64) {
     |                                  ^^^^^^^^^^^
error: at 116:5: [INIT-RefObligationUnfulfilled] In function 'mut_struct_moved_no_writeback', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
     |
 116 |     drop p;
     |     ^^^^^^
  = note: reference declared here
     |
 112 | fn mut_struct_moved_no_writeback(r: &mut P) {
     |                                  ^^^^^^^^^
error: at 127:5: [INIT-RefObligationUnfulfilled] In function 'mut_struct_field_moved', block 'entry': reference 'r' has unfulfilled obligation: pointee is partially initialized, but must be initialized before the reference expires
     |
 127 |     drop x;
     |     ^^^^^^
  = note: reference declared here
     |
 123 | fn mut_struct_field_moved(r: &mut P) {
     |                           ^^^^^^^^^
error: at 136:5: [INIT-RefObligationUnfulfilled] In function 'uninit_scalar_written', block 'entry': reference 'r' has unfulfilled obligation: pointee is initialized, but must be consumed before the reference expires
     |
 136 |     return
     |     ^^^^^^
  = note: reference declared here
     |
 133 | fn uninit_scalar_written(r: &uninit i64) {
     |                          ^^^^^^^^^^^^^^
error: at 145:5: [INIT-RefObligationUnfulfilled] In function 'uninit_struct_field_written', block 'entry': reference 'r' has unfulfilled obligation: pointee is partially initialized, but must be consumed before the reference expires
     |
 145 |     return
     |     ^^^^^^
  = note: reference declared here
     |
 142 | fn uninit_struct_field_written(r: &uninit P) {
     |                                ^^^^^^^^^^^^
